# dns-of-money

./: .env.example  CHANGELOG.md  FAS-1_v0.2_final.md  LICENSE  README.md
docs/: FAS-1-spec.md  FAS-1.md  integration-guide.md
examples/: README.md
examples/curl/: agent_card.sh  register.sh  resolve.sh  send.sh
examples/python/: register.py  resolve.py  send.py
examples/typescript/: resolve.ts
schemas/: agent-card.json  alias-registration.json  resolution-response.json
sdk/: __init__.py  client.py
sdk/python/: README.md  pyproject.toml
sdk/python/dnsofmoney/: __init__.py  client.py  exceptions.py  models.py
sdk/typescript/: README.md  package.json
sdk/typescript/src/: client.ts  exceptions.ts  index.ts  models.ts
xapp-frontend/: .env.example  .env.production  .gitignore  .vercelignore  README.md  index.html  package.json  vercel.json  vite.config.ts
xapp-frontend/src/: App.tsx  index.css  main.tsx
xapp-frontend/src/api/: client.ts
xapp-frontend/src/xaman/: XamanProvider.tsx  sdk.ts  types.ts  useXaman.ts
