[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsofmoney"
version = "0.2.0"
description = "DNS of Money — pay: alias resolution SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

authors = [
    { name = "DNS of Money", email = "sdk@dnsofmoney.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://dnsofmoney.com"
Repository = "https://github.com/dnsofmoney/dns-of-money"
Documentation = "https://docs.dnsofmoney.com"

[project.optional-dependencies]
dev = ["pytest", "requests-mock"]
